--- a/ToDoListBlazor/Components/Pages/Home.razor
+++ b/ToDoListBlazor/Components/Pages/Home.razor
@@ -5,6 +5,14 @@
 @using System.Text.Json;
 @using System.Text.Json.Serialization;
 
+    @using Grpc.Net.Client;
+    @using Greet;
+    @using System;
+    @using System.Threading.Tasks;
+    @using ToDoListCore;
+
+
+
 
 
 @page "/"
@@ -23,6 +31,7 @@ else
     <h1>currentUser=@currentUser</h1>
     <h1>currentUserEmail=@currentUserEmail</h1>
     <h1>toDoItemsCount=@toDoItemsCount</h1>
+    <h1>grpcHelloServiceResponse=@grpcHelloServiceResponse</h1>
 }
 
 Welcome to your new app.
@@ -33,6 +42,7 @@ Welcome to your new app.
     private string currentUser=String.Empty;
     private string currentUserEmail = String.Empty;
     private int toDoItemsCount;
+    private string grpcHelloServiceResponse;
 
     protected override async Task OnInitializedAsync()
     {
@@ -108,6 +118,19 @@ Welcome to your new app.
                     toDoItemsCount = toDoItems.Count;
                 }
             }
+
+            //GRPC client
+            // using var channel = GrpcChannel.ForAddress(Configuration.WebApiUrl); 
+            // var clientGrpc = new Greeter.GreeterClient(channel);
+            // var reply = await clientGrpc.SayHelloAsync(new HelloRequest { Name = "World" });
+            // Console.WriteLine($"Greeting: {reply.Message}");
+
+
+
+
+            ////GRPC client
+            var testClass = new TestClass();
+            grpcHelloServiceResponse = Task.Run(() => testClass.GetDataAsync()).Result;
         }
     }
 
